# megacommerce-search

./: .dockerignore  Cargo.toml  Dockerfile.dev  config.dev.yaml  config.local.yaml
.github/workflows/: build.yml
src/: main.rs
src/common/: config.rs
src/config/: init.rs  mod.rs  trans.rs
src/controller/: commit_coordinator.rs  consumer.rs  consumer_shutdown.rs  message_processor.rs  metrics.rs  mod.rs  shutdown.rs  task_processor.rs
src/models/: config.rs  tasks.rs
src/server/: config.rs  getters.rs  init.rs  mod.rs
