[package]
name = "megacommerce-search"
version = "0.1.0"
edition = "2024"

[dependencies]
megacommerce-proto = "0.4.65"
megacommerce-shared = "0.4.35"
tonic = "0.13.1"
futures = "0.3.31"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "macros",
  "chrono",
  "uuid",
] }
deadpool-redis = { version = "0.22.0", features = ["serde", "rt_tokio_1"] }
rdkafka = { version = "0.38.0", features = ["tokio"] }
reqwest = { version = "0.12.24", features = ["json", "gzip", "rustls-tls"] }
tokio = { version = "^1.41.1", features = ["full"] }
prometheus = "0.14.0"
hyper = "1.7.0"
hyper-util = { version = "0.1.0", features = ["tokio"] }
dashmap = "6.1.0"
parking_lot = "0.12.5"

derive_more = { version = "2.0.1", features = [
  "display",
  "from",
  "from_str",
  "debug",
] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
base64 = "0.22.1"
md5 = "0.8.0"
once_cell = "1.21.3"
rand = "0.9.2"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"

tracing = "0.1.41"
tracing-subscriber = "0.3.20"
